--- a/Resume/Resume.css
+++ b/Resume/Resume.css
@@ -1,44 +1,61 @@
-*{
+* {
     font-family: 微軟正黑體;
 }
-.skill{
-    display:flex;
+
+:root {
+    --bg-color: #ffffff;
+    --skillCard-color: #EEDFDF;
+    --skillCardBorder-color: #A6A3A3;
+    --expCard-color: #EEE7DF;
+}
+
+body {
+    background-color: var(--bg-color);
+}
+a{
+    text-decoration: none;
+}
+.wrap {
+    background-color: var(--skillCard-color);
+    width: 900px;
+    margin: auto;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.skill {
+    display: flex;
     margin: auto;
     margin-top: 10px;
 }
-.wrap{
-    width: 900px;
-    margin: auto;
-}
-.skillCardTitle{
+
+.skill .Card {
     width: 100px;
     height: 30px;
+    margin-right: 5px;
+}
+
+.title {
     border: none;
-    margin-right: 5px;
     padding-left: 10px;
-    padding-top: 10px;
+    padding-top: 8px;
+    margin-left: 15px;
 }
 
-.skillCard{
-    width: 100px;
-    height: 30px;
-    border-color: black;
-    border: 2px solid;
+.border {
+    border: 2px solid var(--skillCardBorder-color);
     border-radius: 10px;
-    margin-right: 5px;
     text-align: center;
-    line-height:30px;
-    
+    line-height: 30px;
 }
 
-.expCard{
+.expCard {
     width: 900px;
     height: auto;
     padding: 10px;
     margin: auto;
     padding-left: 20px;
     margin-top: 10px;
-    background-color: rgb(229, 241, 224);
+    background-color: var(--expCard-color);
     border-radius: 8px;
 }
-
