--- a/Resume/Resume.css
+++ b/Resume/Resume.css
@@ -6,7 +6,8 @@
     --bg-color: #ffffff;
     --skillCard-color: #EEDFDF;
     --skillCardBorder-color: #A6A3A3;
-    --expCard-color: #EEE7DF;
+    --experience-color: #EEE7DF;
+    --aboutMe-color: #DAF5DA;
 }
 
 body {
@@ -49,13 +50,27 @@ a{
     line-height: 30px;
 }
 
-.expCard {
+.bigCard{
     width: 900px;
     height: auto;
     padding: 10px;
     margin: auto;
     padding-left: 20px;
     margin-top: 10px;
-    background-color: var(--expCard-color);
     border-radius: 8px;
+}
+
+.experience{
+    background-color: var(--experience-color);
+}
+
+.aboutMe {
+    background-color: var(--aboutMe-color);
+}
+
+.play{
+}
+
+img{
+    width: 900px;
 }
