--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -74,4 +74,17 @@ a{
 
 img{
     width: 900px;
+    height: 600px;
+}
+
+
+#btn_pre{
+    position: relative;
+    top: 300px;
+    left :-100px
+}
+#btn_next{
+    position: relative;
+    top: 300px;
+    left: 850px;
 }
