--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -13,15 +13,40 @@
 body {
     background-color: var(--bg-color);
 }
-a{
+
+a {
     text-decoration: none;
 }
+
+/* Introduction Setting */
+
+.head {
+    width:900px;
+    height: 250px;
+    margin: auto;
+    position: relative;
+}
+
+.headtext{
+    position: absolute;
+    margin-top: 50px;
+    left: 100px;
+    width: 300px;
+}
+
+.avator {
+    border-radius: 50%;
+    width: 200px;
+    margin : 30px 0px 0px 500px;
+}
+
 .wrap {
     background-color: var(--skillCard-color);
     width: 900px;
     margin: auto;
     padding: 15px;
     border-radius: 10px;
+    box-shadow: 4px 4px 5px #cecbcb;
 }
 
 .skill {
@@ -50,7 +75,7 @@ a{
     line-height: 30px;
 }
 
-.bigCard{
+.bigCard {
     width: 900px;
     height: auto;
     padding: 10px;
@@ -58,9 +83,26 @@ a{
     padding-left: 20px;
     margin-top: 10px;
     border-radius: 8px;
+    box-shadow: 4px 4px 5px #cecbcb;
 }
 
-.experience{
+.portfolioCard {
+    width: 900px;
+    height: auto;
+    padding: 10px;
+    margin: auto;
+    padding-left: 20px;
+    margin-top: 10px;
+    border-radius: 8px;
+    background-color: rgb(247, 244, 244);
+}
+
+.portfolioCard img {
+    width: 890px;
+    height: 600px;
+}
+
+.experience {
     background-color: var(--experience-color);
 }
 
@@ -68,23 +110,47 @@ a{
     background-color: var(--aboutMe-color);
 }
 
-.play{
-    width: 900px;
-}
+/* Portfolio */
 
-img{
+.play {
     width: 900px;
     height: 600px;
 }
 
-
-#btn_pre{
+#btn_pre {
     position: relative;
-    top: 300px;
-    left :-100px
+    top: -50%;
 }
-#btn_next{
+
+#btn_next {
     position: relative;
-    top: 300px;
-    left: 850px;
+    float: right;
+    top: -50%;
+}
+
+.btn_Play {
+    background-color: rgb(187, 205, 228);
+    border: rgb(255, 255, 255) 2px solid;
+    border-radius: 10px;
+    height: 40px;
+    width: 100px;
+}
+
+.btn_Play:hover {
+    background-color: rgb(222, 229, 238);
+}
+
+.spaceDiv {
+    height: 30px;
+}
+
+.a_button {
+    border: 1px solid rgb(209, 209, 233);
+    background-color: rgb(222, 222, 236);
+    border-radius: 4px;
+    padding: 4px;
+}
+
+.a_button:hover {
+    background-color: rgb(184, 184, 219);
 }
